apps/coflow/base/coflow/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coflow
  namespace: coflow
  labels:
    app: coflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coflow
  template:
    metadata:
      labels:
        app: coflow
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: coflow
        image: ghcr.io/jorgevizu4/coflow:main-a299fc8
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
