apps/coflow/base/coflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coflow
  labels:
    app: coflow
spec:
  selector:
    app: coflow
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
