apps/coflow/base/coflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coflow
  labels:
    app: coflow
spec:
  ingressClassName: nginx 
  rules:
  - host: coflow.192.168.49.2.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coflow
            port:
              number: 80
